--- a/backend/Dockerfile.server
+++ b/backend/Dockerfile.server
@@ -7,20 +7,18 @@ WORKDIR /app
 COPY . .
 
 RUN make dependency
-# CGO_ENABLED=0 GOOS=linux GOARCH=amd64
-RUN make service
+RUN make server
 
 FROM alpine:3.19
 
 WORKDIR /app
-COPY --from=builder /app/bin/analytics-server /app
+COPY --from=builder /app/bin/metrics-server-api /app
 
-EXPOSE 3000
+EXPOSE 8080
 
-# Add docker-compose-wait tool -------------------
+# Add docker-compose-wait tool
 ENV WAIT_VERSION 2.9.0
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
 RUN chmod +x /wait
 
-# ENTRYPOINT ["./fleet-state-service"]
-CMD /wait && ./analytics-server
+CMD /wait && ./metrics-server-api
