--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,23 +1,6 @@
 version: '3'
 services:
-  # postgres:
-  #   image: postgres:15.2-alpine
-  #   env_file:
-  #     - .env
-  #   ports:
-  #     - "5432:5432"
-  #   volumes:
-  #     - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
-  #   restart: always
-  #   healthcheck:
-  #     test: "pg_isready --username=analytics && psql --username=analytics --list"
-  #     timeout: 10s
-  #     retries: 20
-  #   networks:
-  #     - app-tier
-
   timescaledb:
-    # image: timescale/timescaledb:latest-pg16
     image: timescale/timescaledb:latest-pg15
     restart: always
     env_file:
@@ -26,23 +9,22 @@ services:
       - 5432:5432
     environment:
       PGDATA: /var/lib/postgresql/data/timescaledb
-    # volumes:
-    #   - data/timescaledb:/var/lib/postgresql/data
     networks:
       - app-tier
 
-  analytics-server:
+  metrics-server-api:
     build:
       context: ./
       dockerfile: Dockerfile.server
-    container_name: analytics-server
+    container_name: metrics-server-api
     depends_on:
-      # - postgres
       - timescaledb
     ports:
-      - "3000:3000"
+      - "8080:8080"
     env_file:
       - .env
+    environment:
+      - DB_HOST=timescaledb
     networks:
       - app-tier
 
