refactor: renamed backend to metrics-server-api and add simulator docker-compose run

--- a/.env
+++ b/.env
@@ -15,8 +15,5 @@ POSTGRES_USER=metrics-server
 POSTGRES_PASSWORD=metrics-server
 POSTGRES_DB=metrics-server
 
-# Simulator
-ANALYTICS_SERVER_URL=http://localhost:8080
-
-# Used by Frontend
+# Used by Frontend and simulator
 METRICS_SERVER_URL=http://localhost:8080
